Fixes examples comments.

--- a/examples/components/simpleviewer.html
+++ b/examples/components/simpleviewer.html
@@ -29,7 +29,7 @@ limitations under the License.
     }
   </style>
 
-  <link rel="stylesheet" href="../../build/components/pdf_viewer.css"/>
+  <link rel="stylesheet" href="../../build/components/pdf_viewer.css">
 
   <!-- for legacy browsers -->
   <script src="../../build/components/compatibility.js"></script>
