--- a/web/viewer.css
+++ b/web/viewer.css
@@ -1371,6 +1371,10 @@ html[dir='rtl'] .attachmentsItem > button {
   vertical-align: middle;
 }
 
+.dialog :link {
+  color: white;
+}
+
 #passwordOverlay > .dialog {
   text-align: center;
 }
