--- a/web/annotations_layer_builder.css
+++ b/web/annotations_layer_builder.css
@@ -13,6 +13,10 @@
  * limitations under the License.
  */
 
+.annotationLayer section {
+  position: absolute;
+}
+
 .annotationLayer .annotLink > a:hover {
   opacity: 0.2;
   background: #ff0;
