--- a/test/annotation_layer_test.css
+++ b/test/annotation_layer_test.css
@@ -39,35 +39,37 @@
   box-shadow: 0px 2px 10px #ff0;
 }
 
-.annotationLayer .annotText > img {
+.annotationLayer .textAnnotation img {
   position: absolute;
 }
 
-.annotationLayer .annotTextContentWrapper {
+.annotationLayer .popupWrapper {
   position: absolute;
   width: 20em;
 }
 
-.annotationLayer .annotTextContent {
+.annotationLayer .popup {
+  position: absolute;
   z-index: 200;
-  float: left;
   max-width: 20em;
   background-color: #FFFF99;
   box-shadow: 0px 2px 5px #333;
   border-radius: 2px;
   padding: 0.6em;
+  margin-left: 5px;
   display: block !important;
   font: message-box;
+  word-wrap: break-word;
 }
 
-.annotationLayer .annotTextContent > h1 {
+.annotationLayer .popup h1 {
   font-size: 1em;
   border-bottom: 1px solid #000000;
   margin: 0;
   padding: 0 0 0.2em 0;
 }
 
-.annotationLayer .annotTextContent > p {
+.annotationLayer .popup p {
   margin: 0;
   padding: 0.2em 0 0 0;
 }
