Rename and reorder link annotation CSS

--- a/test/annotation_layer_test.css
+++ b/test/annotation_layer_test.css
@@ -27,7 +27,7 @@
   position: absolute;
 }
 
-.annotationLayer .annotLink > a {
+.annotationLayer .linkAnnotation > a {
   position: absolute;
   font-size: 1em;
   top: 0;
