Implement support for Squiggly annotations

--- a/web/annotation_layer_builder.css
+++ b/web/annotation_layer_builder.css
@@ -69,10 +69,8 @@
   padding-top: 0.2em;
 }
 
-.annotationLayer .underlineAnnotation {
-  cursor: pointer;
-}
-
+.annotationLayer .underlineAnnotation,
+.annotationLayer .squigglyAnnotation,
 .annotationLayer .strikeoutAnnotation {
   cursor: pointer;
 }
