Implement support for Highlight annotations

--- a/web/annotation_layer_builder.css
+++ b/web/annotation_layer_builder.css
@@ -69,6 +69,7 @@
   padding-top: 0.2em;
 }
 
+.annotationLayer .highlightAnnotation,
 .annotationLayer .underlineAnnotation,
 .annotationLayer .squigglyAnnotation,
 .annotationLayer .strikeoutAnnotation {
