Text widget annotations: implement comb support

--- a/test/annotation_layer_test.css
+++ b/test/annotation_layer_test.css
@@ -67,6 +67,12 @@
   border: 1px solid transparent;
 }
 
+.annotationLayer .textWidgetAnnotation input.comb {
+  font-family: monospace;
+  padding-left: 2px;
+  padding-right: 0;
+}
+
 .annotationLayer .popupAnnotation {
   display: block !important;
 }
